# similarr

./: Cargo.toml  README.md
src/: main.rs  similarr.rs
